--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@
    list-style-type: none;
    justify-content: space-between;
 }
+
 .checkbox-hidden {
    display: none;
 }
@@ -113,4 +114,129 @@ a:hover,
    margin: 0;
    text-transform: uppercase;
    text-align: center;
+}
+
+/* ========== trends ========== */
+.content {
+  margin-top: 60px;
+  margin-bottom: 62px;
+}
+
+.trends__title,
+.shop__title {
+  text-align: center;
+  text-transform: uppercase;
+
+  font-family: OpenSans-Bold;
+  font-size: 20px;
+  font-weight: bold;
+
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+.trends__title::after,
+.shop__title::after {
+  content: "";
+  display: block;
+
+  width: 65px;
+  height: 3px;
+
+  background-color: #b59f5b;
+  margin: 10px auto 0;
+}
+
+.trends__wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.trend__card {
+  width: calc((100% / 4) - 3px);
+  min-height: 320px;
+
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: flex-end;
+  background-size: cover;
+  padding: 20px;
+
+  position: relative;
+  z-index: 0;
+}
+
+.img__first {
+  background-image: url(/img/trend1.jpg);
+}
+
+.img__second {
+  background-image: url(/img/trend2.jpg);
+}
+
+.img__third {
+  background-image: url(/img/trend3.jpg);
+}
+
+.img__fourth {
+  background-image: url(/img/trend4.jpg);
+}
+
+.trend__card::after {
+  content: "";
+  background-color: #000000;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity: 0.6;
+
+  position: absolute;
+  z-index: -1;
+}
+
+.trend__body {
+  width: 100%;
+
+  border: solid 4px rgb(181, 159, 91, 0.6);
+  padding: 35px 30px 25px;
+}
+
+.card__title {
+  font-family: OpenSans-Bold;
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+
+.tegs__trends {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+
+  padding: 0;
+}
+
+.teg__link {
+  text-decoration: none;
+  text-transform: uppercase;
+
+  font-family: OpenSans-Bold;
+  font-size: 14px;
+  font-weight: bold;
+  color: #b59f5b;
+}
+
+.teg__link:nth-child(odd) {
+  margin-right: 20px;
+}
+
+.main {
+  width: 1170px;
+  margin: 65px auto 0;
+  display: flex;
 }
