--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 }
 
 .header {
-   background-image: url(/img/banner-bg.jpg);
+   background-image: url(../img/banner-bg.jpg);
    background-repeat: no-repeat;
    background-size: cover;
 
@@ -169,19 +169,19 @@ a:hover,
 }
 
 .img__first {
-  background-image: url(/img/trend1.jpg);
+  background-image: url(../img/trend1.jpg);
 }
 
 .img__second {
-  background-image: url(/img/trend2.jpg);
+  background-image: url(../img/trend2.jpg);
 }
 
 .img__third {
-  background-image: url(/img/trend3.jpg);
+  background-image: url(../img/trend3.jpg);
 }
 
 .img__fourth {
-  background-image: url(/img/trend4.jpg);
+  background-image: url(../img/trend4.jpg);
 }
 
 .trend__card::after {
