--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,10 @@ a:hover,
   box-shadow: 0 0 3px #777;
 }
 
+.post:nth-child(7) {
+  margin-bottom: 0;
+}
+
 .post-img {
   width: 380px;
   height: 290px;
