Добавил стили для блока наши изделия

--- a/css/style.css
+++ b/css/style.css
@@ -509,10 +509,87 @@ a:hover,
   top: -5px;
 }
 
-a {   /* стили ссылок */
+a {   /* === стили ссылок === */
   text-decoration: none;
 }
 
-a:hover {    /* hover для ссылок <a> */
+a:hover {    /* === hover для ссылок <a> === */
   color: rgb(255, 204, 153);     
+}
+
+/* === блок наши изделия === */
+
+.container {
+  width: 1170px;
+  margin: 60px auto;
+}
+
+.shop-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.shop-card {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-preview {
+  padding: 30px 20px;
+}
+
+.shop-body {
+  flex-grow: 1;
+  margin-top: -60px;
+  background-color: transparent;
+  opacity: 1;
+  border: 2px solid #b59f5b;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.product-description {
+  font-family: "OpenSans-Regular";
+  font-size: 15px;
+}
+
+.product-link {
+  text-decoration: none;
+  color: #b59f5b;
+}
+
+.footer-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.price {
+  display: flex;
+  flex-direction: column;
+  font-family: "OpenSans-Bold";
+}
+
+.sale {
+  font-size: 14px;
+  text-decoration: line-through;
+}
+
+.product-button {
+  width: 137px;
+  height: 54px;
+  text-transform: uppercase;
+  font-family: opensans, Arial, sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #b59f5b;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
 }
