Исправил класс ссылки в постах

--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ a:hover,
   line-height: 14px;
 }
 
-.title-post {
+.title-post-link {
   font-family: "OpenSans-Bold";
   font-size: 20px;
   line-height: 23px;
