--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,6 @@ a:hover,
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-
   padding: 0;
 }
 
@@ -280,13 +279,16 @@ a:hover,
   line-height: 14px;
 }
 
+.title-post {
+  margin-top: 10px;
+}
+
 .title-post-link {
   font-family: "OpenSans-Bold";
   font-size: 20px;
   line-height: 23px;
   text-transform: uppercase;
   color: #0f0d0e;
-  margin-top: 5px;
 }
 
 .post-date {
