Исправлял ошибки добавил тени

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ a:hover,
   align-items: flex-end;
   background-size: cover;
   padding: 20px;
+   box-shadow: 0 0 5px #777;
 
   position: relative;
   z-index: 0;
@@ -310,7 +311,7 @@ a:hover,
   font-size: 15px;
   line-height: 22px;
   color: #070707;
-  margin: 40px 0;
+  margin: 40px 0 0;
 }
 
 /* --- aside --- */
@@ -349,7 +350,7 @@ a:hover,
   text-align: left;
   display: flex;
   margin-bottom: 22px;
-  box-shadow: 0 0 5px #777;  /*  */
+  box-shadow: 0 0 3px #777;  /*  */
 }
 
 .new-post img {
