--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,12 @@ a:hover,
 }
 
    /* === блок trends === */
-.content {
+.content {     /* === отступы блока trends === */
   margin-top: 60px;
   margin-bottom: 60px;
 }
 
-.trends__title,
+.trends__title,   /* === стили для заголовка trends === */
 .shop__title {
   text-align: center;
   text-transform: uppercase;
@@ -132,7 +132,7 @@ a:hover,
   margin-bottom: 25px;
 }
 
-.trends__title::after,
+.trends__title::after,  /* === стили псевдо элемента === */
 .shop__title::after {
   content: "";
   display: block;
@@ -156,11 +156,11 @@ a:hover,
   min-height: 320px;
 
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   align-items: flex-end;
   background-size: cover;
   padding: 20px;
-   box-shadow: 0 0 5px #777;
+  box-shadow: 0 0 3px #777;   /*  */
 
   position: relative;
   z-index: 0;
@@ -184,7 +184,9 @@ a:hover,
 
 .trend__card::after {
   content: "";
+  display: block;
   background-color: #000;
+   
   top: 0;
   right: 0;
   left: 0;
@@ -218,12 +220,11 @@ a:hover,
 }
 
 .teg__link {
-  text-decoration: none;
-  text-transform: uppercase;
-
   font-family: OpenSans-Bold;
   font-size: 14px;
   color: #b59f5b;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .teg__link:nth-child(odd) {
@@ -232,9 +233,10 @@ a:hover,
 
       /* === блок main === */
 .main {
-  width: 1170px;
-  margin: 65px auto 0;
+  max-width: 1170px;
+  margin: 0 auto;
   display: flex;
+  justify-content: space-between;
 }
 
 
@@ -242,11 +244,12 @@ a:hover,
 /* --- posts --- */
 
 .posts {
-  width: 780px;
+  max-width: 780px;
 }
 
 .post {
   display: flex;
+  justify-content: space-between;
   margin-bottom: 50px;
   box-shadow: 0 0 3px #777;   /*  */
 }
@@ -263,7 +266,7 @@ a:hover,
 }
 
 .post-text {
-  width: 370px;
+  max-width: 370px;
 }
 
 .title-head {
